--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@ layout: default
         <link rel="shortcut icon" type="image/png" href="/assets/images/favicon.ico">
 
         <link rel="canonical" href="https://hayleyjolliffe.co">
+        <link rel="me authn" href="https://github.com/hayleyjolliffe">
         <link rel="alternate" type="application/atom+xml" href="/feed.xml">
 
         <meta charset="UTF-8">
@@ -39,6 +40,18 @@ layout: default
             {{ content }}
 
         </main>
+
+        <footer>
+            <p>
+                <small>
+                    Stay in the loop via <a href="/feed.xml">RSS</a>.<br>
+                    Found value in my work? Consider joining the <a href="https://ko-fi.com/hayleyjolliffe" target="_blank">One a Month Club</a>.
+                </small>
+            </p>
+            <p>
+                <span><small>Powered by <a href="https://ko-fi.com/hayleyjolliffe">Peach Red Bull</a>.</small></span>
+            </p>
+        </footer>
 
     </body>
 </html>
