--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@ layout: default
         <link rel="canonical" href="https://hayleyjolliffe.co">
         <link rel="me authn" href="https://github.com/hayleyjolliffe">
         <link rel="alternate" type="application/atom+xml" href="/feed.xml">
+        <link rel="pingback" href="https://webmention.io/hayleyjolliffe.co/xmlrpc">
 
         <meta charset="UTF-8">
         <meta content="width=device-width, initial-scale=1" name="viewport">
