Add Fathom analytics

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,8 @@ layout: default
         <meta content="{{ page.title }}" name="twitter:title">
         <meta content="{{ page.description }}" name="twitter:description">
         <meta content="/assets/images/{{ page.image }}.webp" name="twitter:image">
+
+        <script src="https://cdn.usefathom.com/script.js" data-site="XVXJGBGD" defer></script>
     </head>
     <body>
 
