--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@ layout: default
         <meta content="{{ page.description }}" name="twitter:description">
         <meta content="/assets/images/{{ page.image }}.webp" name="twitter:image">
 
-        <script src="https://cdn.usefathom.com/script.js" data-site="XVXJGBGD" defer></script>
+        <script defer src="https://cloud.umami.is/script.js" data-website-id="b0fcc5a4-894c-47b7-aa48-c1578ae34376"></script>
     </head>
     <body>
 
