--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,7 @@ layout: default
         <footer>
             <p>
                 <small>
-                    Stay in the loop via <a href="/feed.xml">RSS</a>.<br>
+                    Stay in the loop via <a href="/feed.xml">RSS</a> or <a href="https://hayleyjolliffe.substack.com" target="_blank">Substack</a>.<br>
                     Found value in my work? Consider joining the <a href="https://ko-fi.com/hayleyjolliffe" target="_blank">One a Month Club</a>.
                 </small>
             </p>
