--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,12 +6,11 @@ layout: default
 <html>
     <head>
         <title>{{ page.title }}</title>
-        <link rel="stylesheet" href="/assets/css/{{ page.styling }}.css">
+        <link rel="stylesheet" href="/assets/style.css">
         <link rel="shortcut icon" type="image/png" href="/assets/images/favicon.ico">
 
         <link rel="canonical" href="https://hayleyjolliffe.co">
         <link rel="me authn" href="https://github.com/hayleyjolliffe">
-        <link rel="alternate" type="application/atom+xml" href="/feed.xml">
         
         <link rel="webmention" href="https://webmention.io/hayleyjolliffe.co/webmention">
         <link rel="pingback" href="https://webmention.io/hayleyjolliffe.co/xmlrpc">
@@ -33,30 +32,20 @@ layout: default
         <script defer src="https://cloud.umami.is/script.js" data-website-id="b0fcc5a4-894c-47b7-aa48-c1578ae34376"></script>
     </head>
     <body>
-
-        <header>
-
-            <a href="/">Hayley Jolliffe</a>
-
-        </header>
-
         <main>
+            <div class="site">
+                <header>
+                    <p>Hayley Jolliffe</p>
+                </header>
 
-            {{ content }}
+                <article>
+                    {{ content }}
+                </article>
 
+                <footer>
+                    <p><small>Solvitur ambulando<br>&copy;2026 Salvus</small></p>
+                </footer>
+            </div>
         </main>
-
-        <footer>
-            <p>
-                <small>
-                    Stay in the loop via <a href="/feed.xml">RSS</a> or <a href="https://hayleyjolliffe.substack.com" target="_blank">Substack</a>.<br>
-                    Found value in my work? Consider joining the <a href="https://ko-fi.com/hayleyjolliffe" target="_blank">One a Month Club</a>.
-                </small>
-            </p>
-            <p>
-                <span><small>Powered by <a href="https://ko-fi.com/hayleyjolliffe">Peach Red Bull</a>.</small></span>
-            </p>
-        </footer>
-
     </body>
 </html>
